yes, the fonts were too big - fix it.

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -44,7 +44,7 @@ table {
 }
 
 html {
-	font-size: 22px;
+	font-size: 16px;
 }
 
 body {
@@ -189,6 +189,9 @@ div.clear {
 }
 
 @media screen and (min-width: 777px) {
+    html {
+        font-size: 18px;
+    }
     body {
         width: 700px;
     }
